--- a/src/index.html
+++ b/src/index.html
@@ -100,113 +100,7 @@
           <a class="header__mainMenu__troublesMenu__cases__title">
             Частые проблемы
           </a>
-          <div class="header__mainMenu__troublesMenu__cases__lists">
-            <ul class="header__mainMenu__troublesMenu__cases__lists__list">
-              <span class="header__mainMenu__troublesMenu__cases__lists__list__title">
-                Дисплей
-              </span>
-              <li class="header__mainMenu__troublesMenu__cases__lists__list__item casesText">
-                <p>Разбит экран</p>
-                <span class="arrowIcon arrowIcon--right"></span>
-              </li>
-              <li class="header__mainMenu__troublesMenu__cases__lists__list__item casesText">
-                <p>Не работает экран</p>
-                <span class="arrowIcon arrowIcon--right"></span>
-              </li>
-              <li class="header__mainMenu__troublesMenu__cases__lists__list__item casesText">
-                <p>Разбит экран</p>
-                <span class="arrowIcon arrowIcon--right"></span>
-              </li>
-              <li class="header__mainMenu__troublesMenu__cases__lists__list__item casesText">
-                <p>Не работает экран</p>
-                <span class="arrowIcon arrowIcon--right"></span>
-              </li>
-            </ul>
-            <ul class="header__mainMenu__troublesMenu__cases__lists__list">
-              <span class="header__mainMenu__troublesMenu__cases__lists__list__title">
-                Электроника
-              </span>
-              <li class="header__mainMenu__troublesMenu__cases__lists__list__item casesText">
-                <p>Разбит экран</p>
-                <span class="arrowIcon arrowIcon--right"></span>
-              </li>
-              <li class="header__mainMenu__troublesMenu__cases__lists__list__item casesText">
-                <p>Не работает экран</p>
-                <span class="arrowIcon arrowIcon--right"></span>
-              </li>
-              <li class="header__mainMenu__troublesMenu__cases__lists__list__item casesText">
-                <p>Разбит экран</p>
-                <span class="arrowIcon arrowIcon--right"></span>
-              </li>
-              <li class="header__mainMenu__troublesMenu__cases__lists__list__item casesText">
-                <p>Не работает экран</p>
-                <span class="arrowIcon arrowIcon--right"></span>
-              </li>
-            </ul>
-            <ul class="header__mainMenu__troublesMenu__cases__lists__list">
-              <span class="header__mainMenu__troublesMenu__cases__lists__list__title">
-                Корпус
-              </span>
-              <li class="header__mainMenu__troublesMenu__cases__lists__list__item casesText">
-                <p>Разбит экран</p>
-                <span class="arrowIcon arrowIcon--right"></span>
-              </li>
-              <li class="header__mainMenu__troublesMenu__cases__lists__list__item casesText">
-                <p>Не работает экран</p>
-                <span class="arrowIcon arrowIcon--right"></span>
-              </li>
-              <li class="header__mainMenu__troublesMenu__cases__lists__list__item casesText">
-                <p>Разбит экран</p>
-                <span class="arrowIcon arrowIcon--right"></span>
-              </li>
-              <li class="header__mainMenu__troublesMenu__cases__lists__list__item casesText">
-                <p>Не работает экран</p>
-                <span class="arrowIcon arrowIcon--right"></span>
-              </li>
-            </ul>
-            <ul class="header__mainMenu__troublesMenu__cases__lists__list">
-              <span class="header__mainMenu__troublesMenu__cases__lists__list__title">
-                Фурнитура
-              </span>
-              <li class="header__mainMenu__troublesMenu__cases__lists__list__item casesText">
-                <p>Разбит экран</p>
-                <span class="arrowIcon arrowIcon--right"></span>
-              </li>
-              <li class="header__mainMenu__troublesMenu__cases__lists__list__item casesText">
-                <p>Не работает экран</p>
-                <span class="arrowIcon arrowIcon--right"></span>
-              </li>
-              <li class="header__mainMenu__troublesMenu__cases__lists__list__item casesText">
-                <p>Разбит экран</p>
-                <span class="arrowIcon arrowIcon--right"></span>
-              </li>
-              <li class="header__mainMenu__troublesMenu__cases__lists__list__item casesText">
-                <p>Не работает экран</p>
-                <span class="arrowIcon arrowIcon--right"></span>
-              </li>
-            </ul>
-            <ul class="header__mainMenu__troublesMenu__cases__lists__list">
-              <span class="header__mainMenu__troublesMenu__cases__lists__list__title">
-                Аудио
-              </span>
-              <li class="header__mainMenu__troublesMenu__cases__lists__list__item casesText">
-                <p>Разбит экран</p>
-                <span class="arrowIcon arrowIcon--right"></span>
-              </li>
-              <li class="header__mainMenu__troublesMenu__cases__lists__list__item casesText">
-                <p>Не работает экран</p>
-                <span class="arrowIcon arrowIcon--right"></span>
-              </li>
-              <li class="header__mainMenu__troublesMenu__cases__lists__list__item casesText">
-                <p>Разбит экран</p>
-                <span class="arrowIcon arrowIcon--right"></span>
-              </li>
-              <li class="header__mainMenu__troublesMenu__cases__lists__list__item casesText">
-                <p>Не работает экран</p>
-                <span class="arrowIcon arrowIcon--right"></span>
-              </li>
-            </ul>
-          </div>
+          <div id="troublesCases" class="header__mainMenu__troublesMenu__cases__lists"></div>
         </div>
       </div>
     </div>
